    the display of hydrogens [JED].

  o BUG-FIX: Phosphate-backbone mode enabled for symmetry [Miguel
    Ortiz Lombardia].

  o BUG-FIX: Carbon-Iodine bond length limit lengthened.

  o BUG-FIX: Go To Atom dialog is updated after simple mutation of a
    base [Miguel Ortiz Lombardia]

  o BUG-FIX: Coot no longer things that a SHELXL BLOC card is an atom
    [Zbigniew Dauter].

  o BUG-FIX: sugar chains now find the linkage type better (rather
    than forcing seemingly-random chain breaks) [JED].

  o BUG-FIX: Go to Atom keyboarding chain-id superfluous functions
    removed [JED].

  o BUG-FIX: Don't crash when calculating NCS on reading bogus chains
    from a PDB mmCIF file [Christian Engel].

-----

  Release 0.6

  o FEATURE: User-defined clicks [Joel Bard].

  o FEATURE: SHELXL interfaces allows the user to modify the input before
    running the SHELXL executable [Tobias Beck].

  o FEATURE: Now compatible with Zalman M220W.

  o FEATURE: Post-manipulation function hook added [JED].

  o FEATURE: "Sphere" (residue selection) refinement.

  o FEATURE: function to (re-)calculate probe dots around a give point
    [Joel Bard].

  o FEATURE: monomer and residue selection dipoles.

  o FEATURE: Interactive map sharpening [Randy Read, Alex Brunger].

  o FEATURE: LINK bonds are are now represented.

  o FEATURE: "Backrub rotamers" at low (2.7 or worse) resolution.

  o FEATURE: Baton build parameters (e.g. "backwards") now have a GUI 
    [Phil Evans].

  o FEATURE: Move waters to surround protein [Garib Murshudov]

  o FEATURE: rotate/translate zone by residue ranges

  o FEATURE: Rigid-body fit by residue ranges.

  o FEATURE: Multi-select on reading coordinates is enabled.

  o FEATURE: Immediate access to coordinates from CIF dictionaries
    that contain coordinates (no need for LIBCHECK in such cases).

  o FEATURE: Nudge-residue (bound to Ctrl-arrow keys).

  o FEATURE: A dialog has been added from map averaging [Bob Nolte].
