@@ -273,3 +273,7 @@
 126.359 105.5 109.5
 146.359 115.5 121.0
 188.958 132.8 141.3
+193.914 137 144
+194.786 140 143
+196.759 141.5 145
+200.94 143.2 146.7
