@@ -185,6 +185,9 @@
   o BUG-FIX: Coot no longer things that a SHELXL BLOC card is an atom
     [Zbigniew Dauter].
 
+  o BUG-FIX: LINKs between symmetry related molecules are no longer
+    drawn as long vectors to the same molecule [Alejandro Buschazzio]
+
   o BUG-FIX: sugar chains now find the linkage type better (rather
     than forcing seemingly-random chain breaks) [JED].
 
